# doorhandle_disinfection

./: CMakeLists.txt  README.md  main.cpp
include/: CTimeCounter.hpp  agvmove.hpp  camera.hpp  device.hpp  move.h  object.h  ssd.hpp
output/: output.txt  output1.txt  output2.txt  output3.txt  output4.txt
src/: camera.cpp  device.cpp  move.cpp  ssd.cpp
